Moved FindPath to KernelHelpers so it can be used by LoadModule/etc.
Started to think about module loading stuff. I'll need some way to keep track of them (KernelModule), and I'll need to put some dummy data in the hardcoded modules so they look legit to the query functions. I'll also need to modify ElfFile so it can load PRX's (maybe a subclass), as well as detect encrypted PRXs. Since we can't decrypt them on a PC (yet...), I'll have a set of unencrypted PRXs that can be used as alternatives if a game tries to load one of them (they can be found on the net, but I'll probably write a tool that makes it easy to do for end users).

ElfFile needs some work with relocations - some games don't have a .symtab or something and it is causing the relocation to fail. Obviously they can be relocated without it, so I need to investigate.

A LOT of new functions stubbed out by some painstaking run-app-and-google-missing-nids-and-google-names-and-add-stubs. Ugh. Most of these need to be inlined or supported by native methods because they are probably called a lot. Some of these have 0 documentation on the net, so to make figuring them out easier I need to update the syscall thunk to print more useful information.

Added some stats to FixupStubs. I now have these cool stats for PB and JDA:
PB:
 FixupStubs: 61/89 (68.53933%) NIDs good; 20 not implemented, 8 not found, 0 in missing modules = 89 total
JDA:
 FixupStubs: 82/128 (64.0625%) NIDs good; 44 not implemented, 2 not found, 62 in missing modules = 190 total
 FixupStubs: 4 missing modules (contain 62 NIDs (32.63158% of total)):
		sceLibFont
		sceMpeg
		scePsmf
		sceSasCore

Almost all of the not implemented/not found ones in PB are audio/atrac3 related, with some other minor utility ones. There are also a few sceGe ones that are marked as NI that could be easy to implement. JDA is much of the same with a few file IO (async) ones and a bunch of kernel stuff (the Fpl stuff that is stopping it from running, for example).

--- a/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
+++ b/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
@@ -580,6 +580,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Modules\sceImpose.h"
+					>
+				</File>
+				<File
 					RelativePath=".\Modules\scePower.h"
 					>
 				</File>
