Messing with things in the BIOS, however I think that I've hit the limit of the current architecture. I'll need to rewrite things :( The good news is that if I do, I can add some useful debugging information.
I'm thinking before I rewrite it, I'll build a little debug helper for trace information and such. I'd also like the ability to run in a 'pausable' mode where I can pause execution and inspect things. This means reworking the debugging API I have implemented (kind of).

--- a/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
+++ b/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
@@ -366,6 +366,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Modules\ThreadManForUser.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\Modules\ThreadManForUser_Callbacks.cpp"
 					>
 				</File>
