--- a/Noxa.Emulation.Psp/Noxa.Emulation.Psp.csproj
+++ b/Noxa.Emulation.Psp/Noxa.Emulation.Psp.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Bios\IModule.cs" />
     <Compile Include="ComponentIssue.cs" />
     <Compile Include="ComponentParameters.cs" />
-    <Compile Include="Cpu\CoreState.cs" />
+    <Compile Include="Debugging\DebugModel\CoreState.cs" />
     <Compile Include="Cpu\IAvcDecoder.cs" />
     <Compile Include="Cpu\IClock.cs" />
     <Compile Include="Cpu\ICpu.cs" />
@@ -63,20 +63,22 @@
     <Compile Include="Cpu\IDmaController.cs" />
     <Compile Include="Cpu\IMemory.cs" />
     <Compile Include="Cpu\IMemorySegment.cs" />
-    <Compile Include="Debugging\Breakpoint.cs" />
-    <Compile Include="Debugging\BreakpointEventArgs.cs" />
-    <Compile Include="Debugging\CallstackFrame.cs" />
-    <Compile Include="Debugging\ElfDebugData.cs" />
+    <Compile Include="Debugging\DebugModel\Breakpoint.cs" />
+    <Compile Include="Debugging\DebugModel\BreakpointEventArgs.cs" />
+    <Compile Include="Debugging\DebugModel\Frame.cs" />
+    <Compile Include="Debugging\DebugData\ElfDebugData.cs" />
+    <Compile Include="Debugging\IBiosHook.cs" />
     <Compile Include="Debugging\IDebugControl.cs" />
     <Compile Include="Debugging\IDebugger.cs" />
+    <Compile Include="Debugging\ICpuHook.cs" />
     <Compile Include="Debugging\IDebugInspector.cs" />
-    <Compile Include="Debugging\Instruction.cs" />
-    <Compile Include="Debugging\IProgramDebugData.cs" />
-    <Compile Include="Debugging\Method.cs" />
+    <Compile Include="Debugging\DebugModel\Instruction.cs" />
+    <Compile Include="Debugging\DebugData\IProgramDebugData.cs" />
+    <Compile Include="Debugging\DebugModel\Method.cs" />
     <Compile Include="Debugging\NullDebugger.cs" />
-    <Compile Include="Debugging\ObjdumpDebugData.cs" />
-    <Compile Include="Debugging\ProgramDebugData.cs" />
-    <Compile Include="Debugging\SimpleElfDebugData.cs" />
+    <Compile Include="Debugging\DebugData\ObjdumpDebugData.cs" />
+    <Compile Include="Debugging\DebugData\ProgramDebugData.cs" />
+    <Compile Include="Debugging\DebugData\SimpleElfDebugData.cs" />
     <Compile Include="EmulationParameters.cs" />
     <Compile Include="Games\ElfFile.cs" />
     <Compile Include="Games\GameInformation.cs" />
