Split some of the video processing stuff up.
Fixed texture transfer - it now works for transfers from a buffer to any destination on the target. Specifying source x,y or a different size than the buffer doesn't work.

PSPTris works! Backgrounds and all! It's beautiful!

--- a/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
+++ b/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
@@ -215,6 +215,18 @@
 				>
 			</File>
 			<File
+				RelativePath=".\OglDriver_Sprites.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\OglDriver_Textures.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\OglDriver_VertexLists.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\OglDriver_Worker.cpp"
 				>
 			</File>
