SimpleInput now handles keyboard input. Done with it for now (although it would be nice to find a way to support analog).
Now I need to get PSPTris to stop crashing and show the OSK. Fun fun.

--- a/Noxa.Emulation.Psp.Input.SimpleInput/Noxa.Emulation.Psp.Input.SimpleInput.vcproj
+++ b/Noxa.Emulation.Psp.Input.SimpleInput/Noxa.Emulation.Psp.Input.SimpleInput.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\Shared\Include&quot;;&quot;$(DXSDK_DIR)\Include&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)\Shared\Include&quot;;&quot;$(DXSDK_DIR)\Include&quot;;&quot;C:\Program Files\Microsoft DirectX SDK (February 2007)\Include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="2"
@@ -59,7 +59,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(NoInherit); &quot;$(DXSDK_DIR)Lib\x86\XInput.lib&quot;"
+				AdditionalDependencies="&quot;C:\Program Files\Microsoft DirectX SDK (February 2007)\Lib\x86\XInput.lib&quot; &quot;C:\Program Files\Microsoft DirectX SDK (February 2007)\Lib\x86\dxguid.lib&quot; &quot;C:\Program Files\Microsoft DirectX SDK (February 2007)\Lib\x86\dxerr.lib&quot; &quot;C:\Program Files\Microsoft DirectX SDK (February 2007)\Lib\x86\dinput8.lib&quot; $(NOINHERIT)"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
