Very minor changes to video driver (most commented out) to try to get trigwars working. Still doesn't.
Added some new BIOS routines and fake-implemented some others. sceDmacMemcpy is in (w/ native too), but untested. It only supports main memory->main memory copies right now. Not sure if it is used for anything else.

--- a/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
+++ b/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
@@ -354,6 +354,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Modules\sceDmac.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\Modules\sceGe_user.cpp"
 					>
 				</File>
