--- a/Noxa.Utilities/Noxa.Utilities.csproj
+++ b/Noxa.Utilities/Noxa.Utilities.csproj
@@ -26,6 +26,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\Noxa.Utilities.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -34,6 +35,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Noxa.Utilities.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -43,6 +45,7 @@
   <ItemGroup>
     <Compile Include="CircularList.cs" />
     <Compile Include="EventfulList.cs" />
+    <Compile Include="FastLinkedList.cs" />
     <Compile Include="FastRandom.cs" />
     <Compile Include="ISettingsType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -50,6 +53,7 @@
     <Compile Include="Range.cs" />
     <Compile Include="ReadOnlyDictionary.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="TimerQueue.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
