--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -23,7 +23,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\Debug\</OutputPath>
+    <OutputPath>..\debug\</OutputPath>
     <DefineConstants>TRACE;DEBUG;DONTUSEVIDEO</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
