Implementing some modules.
ModuleMgrForUser is nice now - it calls module_start/stop if it can (or should, anyway). It's so nice, in fact, that I may redo the loader so that it just calls these things to start stuff!

--- a/Noxa.Emulation.Psp.Bios.ManagedHLE/Noxa.Emulation.Psp.Bios.ManagedHLE.csproj
+++ b/Noxa.Emulation.Psp.Bios.ManagedHLE/Noxa.Emulation.Psp.Bios.ManagedHLE.csproj
@@ -59,6 +59,9 @@
     <Compile Include="Module.cs" />
     <Compile Include="Modules\InterruptManager.cs" />
     <Compile Include="Modules\IoFileMgrForUser.cs" />
+    <Compile Include="Modules\IoFileMgrForUser.Devices.cs" />
+    <Compile Include="Modules\IoFileMgrForUser.Directories.cs" />
+    <Compile Include="Modules\IoFileMgrForUser.Files.cs" />
     <Compile Include="Modules\Kernel_Library.cs" />
     <Compile Include="Modules\LoadExecForUser.cs" />
     <Compile Include="Modules\ModuleMgrForUser.cs" />
