Major CPU performance improvements. 1. In the case of jal and jalr, the block will not be broken. This leads larger blocks (and I think, in most cases, they are complete!) which is of course better. 2. jr is now handled better - instead of returning like it was before, it now makes the call to the register inline. It could be made faster, but it's damn good right now.
With this, on average 200k instructions are executed before a return, instead of an average of 200 :P That's only in the case of startup, too - during real execution it may be a lot higher.

--- a/Noxa.Emulation.Psp.Input.SimpleInput/Noxa.Emulation.Psp.Input.SimpleInput.vcproj
+++ b/Noxa.Emulation.Psp.Input.SimpleInput/Noxa.Emulation.Psp.Input.SimpleInput.vcproj
@@ -116,7 +116,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\Shared\Include&quot;;&quot;$(DXSDK_DIR)\Include&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)\Shared\Include&quot;;&quot;$(DXSDK_DIR)\Include&quot;;&quot;C:\Program Files\Microsoft DirectX SDK (February 2007)\Include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="2"
@@ -134,7 +134,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(NoInherit) $(DXSDK_DIR)\Lib\XInput.lib"
+				AdditionalDependencies="&quot;C:\Program Files\Microsoft DirectX SDK (February 2007)\Lib\x86\XInput.lib&quot; &quot;C:\Program Files\Microsoft DirectX SDK (February 2007)\Lib\x86\dxguid.lib&quot; &quot;C:\Program Files\Microsoft DirectX SDK (February 2007)\Lib\x86\dxerr.lib&quot; &quot;C:\Program Files\Microsoft DirectX SDK (February 2007)\Lib\x86\dinput8.lib&quot; $(NOINHERIT)"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				TargetMachine="1"
