Something is broken - sample7 (and probably others) are failing with 0x0 memory reads.
Split trace options in to a separate file - this makes recompiling after changing a trace option a little less painful.

--- a/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
+++ b/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
@@ -426,6 +426,10 @@
 				RelativePath=".\Stdafx.h"
 				>
 			</File>
+			<File
+				RelativePath=".\TraceOptions.h"
+				>
+			</File>
 			<Filter
 				Name="Shared"
 				>
