--- a/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
+++ b/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
@@ -269,6 +269,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\DisplayList.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Noxa.Emulation.Psp.Video.OpenGL.h"
 				>
 			</File>
@@ -308,6 +312,14 @@
 				RelativePath=".\Stdafx.h"
 				>
 			</File>
+			<File
+				RelativePath=".\VideoCommands.h"
+				>
+			</File>
+			<File
+				RelativePath=".\VideoPacket.h"
+				>
+			</File>
 			<Filter
 				Name="Shared"
 				>
@@ -321,18 +333,6 @@
 				</File>
 				<File
 					RelativePath="..\Shared\Include\VideoApi.h"
-					>
-				</File>
-				<File
-					RelativePath="..\Shared\Include\VideoCommands.h"
-					>
-				</File>
-				<File
-					RelativePath="..\Shared\Include\VideoDisplayList.h"
-					>
-				</File>
-				<File
-					RelativePath="..\Shared\Include\VideoPacket.h"
 					>
 				</File>
 			</Filter>
