--- a/Noxa.Utilities/Noxa.Utilities.csproj
+++ b/Noxa.Utilities/Noxa.Utilities.csproj
@@ -48,6 +48,7 @@
     <Compile Include="FastLinkedList.cs" />
     <Compile Include="FastRandom.cs" />
     <Compile Include="ISettingsType.cs" />
+    <Compile Include="NativeEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomTools.cs" />
     <Compile Include="Range.cs" />
