Added a new LRU cache template. NOTE: this currently leaks items in to the list on Remove, as hash_map seems bugged (it crashes if you erase() something from it and then delete that object - wtf?).
Texture cache implemented. Currently 100 textures big, which should be enough for now. Ideally it would be smart and look at remaining video memory and such, but that's too much work for now.

With this fix, things run an order of magnitude faster. Puzzle Bobble runs FULL SPEED. It's flawless. Woo!

There is a bug, relating to OpenGL, where textures show up as white for a frame or two before OpenGL gets its act together. If you can ignore this and pretend it works right, things are great :)

I seem to have broken textures in PSPTris at some point, as well as background quads (which affects the intro). Damn regressions. Need to figure those out before I do too much new stuff.

--- a/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
+++ b/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
@@ -262,6 +262,10 @@
 					/>
 				</FileConfiguration>
 			</File>
+			<Filter
+				Name="Shared"
+				>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -323,6 +327,14 @@
 			<Filter
 				Name="Shared"
 				>
+				<File
+					RelativePath="..\Shared\Include\LL.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Shared\Include\LRU.h"
+					>
+				</File>
 				<File
 					RelativePath="..\Shared\Include\MemoryPool.h"
 					>
