Part 1 of logging system. Very similar to Debug.WriteLine (now Log.WriteLine), but takes an optional verbosity level and feature enumeration. Lots of files touched while going through and converting Debug->Log. I left a few as Debug, namely anything designed to be used while debugging (like GENDEBUG and such in the CPU).
Next step is to write a UI for it!

--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -85,6 +85,12 @@
     <Compile Include="IssueReport.Designer.cs">
       <DependentUpon>IssueReport.cs</DependentUpon>
     </Compile>
+    <Compile Include="LogViewer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LogViewer.Designer.cs">
+      <DependentUpon>LogViewer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Player.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,6 +125,10 @@
     <EmbeddedResource Include="IssueReport.resx">
       <SubType>Designer</SubType>
       <DependentUpon>IssueReport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LogViewer.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>LogViewer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Player.resx">
       <SubType>Designer</SubType>
