--- a/Noxa.Emulation.Psp.GameTester/Noxa.Emulation.Psp.GameTester.csproj
+++ b/Noxa.Emulation.Psp.GameTester/Noxa.Emulation.Psp.GameTester.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GameFinder.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="TestHost.cs" />
     <Compile Include="TestInstance.cs" />
     <Compile Include="Program.cs" />
