Log viewer UI. Very basic right now, but allows selection of verbosity levels (and will refilter on choice), copying to clipboard as text, and saving to file as text. Will add save to HTML/XML, and allow for toggling of features (so one could say 'don't gather log lines from the video plugin', etc). Settings will also persist.

--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -235,6 +235,7 @@
     <Content Include="Resources\AeroWait.gif" />
     <Content Include="Resources\ClearIcon.png" />
     <None Include="Resources\ErrorIcon.png" />
+    <None Include="Resources\CopyIcon.png" />
     <Content Include="Resources\Google.png" />
     <Content Include="Resources\IconBackground.png" />
     <None Include="Resources\InfoIcon.png" />
@@ -244,6 +245,7 @@
     <None Include="Resources\PspShake.png" />
     <None Include="Resources\RemoveIcon.png" />
     <Content Include="Resources\ResizeIcon.png" />
+    <None Include="Resources\SaveIcon.png" />
     <Content Include="Resources\SelectedMemoryStickIcon.png" />
     <Content Include="Resources\SelectedUmdIcon.png" />
     <None Include="Resources\SmallUmdIcon.png" />
