Fix for CLUT pointers. Added VFPU registers to context (so I'm about .05% done with the VFPU ;). Started playing with BEZIER command - right now it just draws a dummy quad on the screen. Messed with ctrl timestamps. Added some basic sceIoDevctl commands, like detect ms inserted and reg/unreg ms callbacks (although I'm not sure they work right - puzzle quest still won't get out of its loop).

--- a/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
+++ b/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
@@ -211,6 +211,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\OglDriver_Patches.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\OglDriver_Processing.cpp"
 				>
 			</File>
