Kind of reverse engineered mutexes - just enough for Puzzle Quest. Probably work - at least in the case where there are no conflicts it does :) Fixed debug output for unimplemented NIDs - now it properly announces them. Fixed issue with call marshaling (and ensured it works). Added support for memory stick stats devctl. sceKernelRotateThreadReadyQueue is implemented, but I'm not sure it works right.
Puzzle Quest gets stuck in some loop waiting for a callback from someplace - it keeps calling sceKernelCheckCallback.

--- a/Noxa.Emulation.Psp.Bios.ManagedHLE/Noxa.Emulation.Psp.Bios.ManagedHLE.csproj
+++ b/Noxa.Emulation.Psp.Bios.ManagedHLE/Noxa.Emulation.Psp.Bios.ManagedHLE.csproj
@@ -38,6 +38,7 @@
     <Compile Include="Bios.Debugging.cs" />
     <Compile Include="Kernel Types\KCallback.cs" />
     <Compile Include="Kernel Types\KDevice.cs" />
+    <Compile Include="Kernel Types\KMutex.cs" />
     <Compile Include="Kernel Types\KThread.Waiting.cs" />
     <Compile Include="Kernel.cs" />
     <Compile Include="Kernel Types\KEvent.cs" />
@@ -98,6 +99,7 @@
     <Compile Include="Modules\ThreadManForUser.Mailboxes.cs" />
     <Compile Include="Modules\ThreadManForUser.Memory.cs" />
     <Compile Include="Modules\ThreadManForUser.MsgPipes.cs" />
+    <Compile Include="Modules\ThreadManForUser.Mutexes.cs" />
     <Compile Include="Modules\ThreadManForUser.Semaphores.cs" />
     <Compile Include="Modules\ThreadManForUser.ThreadControl.cs" />
     <Compile Include="Modules\ThreadManForUser.Threads.cs" />
