--- a/Noxa.Emulation.Psp.RemoteDebugger/Noxa.Emulation.Psp.RemoteDebugger.csproj
+++ b/Noxa.Emulation.Psp.RemoteDebugger/Noxa.Emulation.Psp.RemoteDebugger.csproj
@@ -93,6 +93,10 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Tools\StatisticsViewer.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>StatisticsViewer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Tools\ToolPane.resx">
       <SubType>Designer</SubType>
       <DependentUpon>ToolPane.cs</DependentUpon>
@@ -110,6 +114,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="Tools\StatisticsViewer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tools\StatisticsViewer.Designer.cs">
+      <DependentUpon>StatisticsViewer.cs</DependentUpon>
     </Compile>
     <Compile Include="Tools\ToolPane.cs">
       <SubType>Form</SubType>
