Fixed some bugs, added some better connection handling, etc. Added screenshot button - writes to the working directory. Setup in a way that will allow the debugger to capture the screen when a breakpoint is hit so that it can be viewed.
Forgot: Last commit included a command line switch for waiting for the debugger: pass --debug or -d

--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -240,6 +240,7 @@
     <None Include="Resources\RemoveIcon.png" />
     <Content Include="Resources\ResizeIcon.png" />
     <None Include="Resources\SaveIcon.png" />
+    <None Include="Resources\ScreenshotIcon.png" />
     <Content Include="Resources\SelectedMemoryStickIcon.png" />
     <Content Include="Resources\SelectedUmdIcon.png" />
     <None Include="Resources\SmallUmdIcon.png" />
