Set timeouts on debug connections to infinite. Should fix issues with disconnects while debugging. Fixed a code gen bug where sometimes the instruction in the delay slot was not getting executed (I think). Something still may be broken. Now don't do a context switch on a call marshal if the target thread is the current thread.
Added callstack retrieval. After writing my own, which sucked, I ripped and modified the code from pspsdk. It can handle most cases, but gets confused by j's - especially in routines that do silly things like jump to another routine instead of returning (like strchr and some file operations). I added some extra error handling on top of the existing stuff so that the emulator doesn't lock up when they occur. Things may still be broken, though.

The way I originally had callstacks implemented was via method tracking - there was an actual stack, and when a method-like call was made the address would be pushed and when a return-like call was made one would be popped. This actually worked well, and handled a lot of the weird cases flawless, but in terms of overhead the walking way is better. If it ends up being a problem, I'll reimplement my way and have a compile switch to toggle between the two.

Until the debugger gets callstack viewing, you can view callstacks on each syscall by changing #if 0 -> 1 in R4000Generator_Special.cpp. Since the debugger will have the symbols and do resolution, all you'll get now is addresses.

--- a/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
+++ b/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
@@ -229,6 +229,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\R4000Callstack.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\R4000Controller.cpp"
 				>
 			</File>
