More debugging API changes. Tweaks to debugger itself (including a fix for an exception in remoting).
Now support basic breakpoint debugging! I was originally going to do it with a fix-up technique like real debuggers use, but that added too much complexity. The way I'm doing it now is nice and easy: I add a bunch of NOPs to the head of every generated instruction, and when a breakpoint is set I set the NOPs to the breakpoint handling code. Sure this causes a 1/3 increase in generated code size, but during debug that's acceptable (I didn't notice much, if any, speed difference anyway). This significantly reduces the complexity of the debugger, while still allowing for cool things.

There is no UI for debugging yet - I have that done in a separate project for now and will merge it in later. Stepping support isn't in yet either.

--- a/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
+++ b/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
@@ -351,10 +351,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Options.h"
-				>
-			</File>
-			<File
 				RelativePath=".\R4000AdvancedBlockBuilder.h"
 				>
 			</File>
@@ -442,10 +438,6 @@
 				RelativePath=".\Stdafx.h"
 				>
 			</File>
-			<File
-				RelativePath=".\TraceOptions.h"
-				>
-			</File>
 			<Filter
 				Name="Shared"
 				>
@@ -479,6 +471,22 @@
 				</File>
 				<File
 					RelativePath="..\Shared\Include\VideoApi.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Options"
+				>
+				<File
+					RelativePath=".\DebugOptions.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Options.h"
+					>
+				</File>
+				<File
+					RelativePath=".\TraceOptions.h"
 					>
 				</File>
 			</Filter>
