Added timeBeginPeriod call in CPU to try to set the mm timer resolution as low as possible. Anything over 3 and I call you stupid.
Added the disassembly stuff in. I pretty much ripped the tables and formatters straight from ector, with minor changes to get them working under C#. Thanks ector!
Right now it's not hooked up, so it just shows some dummy code. You can still check out the tooltips and stuff (which, when done, will show actual data instead of just 0's). There's no nifty visualization of jumps yet, but that'll come.

No more commits for a week or two! (maybe)

--- a/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
+++ b/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
@@ -60,7 +60,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(TargetDir)Noxa.Emulation.Psp.CodeGen.lib $(NOINHERIT)"
+				AdditionalDependencies="$(TargetDir)Noxa.Emulation.Psp.CodeGen.lib Winmm.lib $(NOINHERIT)"
 				LinkIncremental="2"
 				IgnoreDefaultLibraryNames="LIBCMTD.lib"
 				GenerateDebugInformation="true"
@@ -140,7 +140,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(TargetDir)Noxa.Emulation.Psp.CodeGen.lib $(NOINHERIT)"
+				AdditionalDependencies="$(TargetDir)Noxa.Emulation.Psp.CodeGen.lib Winmm.lib $(NOINHERIT)"
 				LinkIncremental="1"
 				IgnoreDefaultLibraryNames="LIBCMTD.lib"
 				GenerateDebugInformation="true"
