--- a/Noxa.Emulation.Psp.RemoteDebugger/Noxa.Emulation.Psp.RemoteDebugger.csproj
+++ b/Noxa.Emulation.Psp.RemoteDebugger/Noxa.Emulation.Psp.RemoteDebugger.csproj
@@ -42,7 +42,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BreakpointEventArgs.cs" />
+    <Compile Include="Model\BreakpointEventArgs.cs" />
     <Compile Include="BreakpointManager.cs" />
     <Compile Include="CodeView.cs">
       <SubType>Form</SubType>
@@ -63,6 +63,17 @@
     <Compile Include="DebugView.Designer.cs">
       <DependentUpon>DebugView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\InstructionFormatter.cs" />
+    <Compile Include="Model\InstructionTables.cs" />
+    <Compile Include="Model\MethodBody.cs" />
+    <Compile Include="Model\RegisterBanks.cs" />
+    <Compile Include="Model\TableEntry.cs" />
+    <Compile Include="Tools\DisassemblyControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Tools\DisassemblyControl.Designer.cs">
+      <DependentUpon>DisassemblyControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tools\LogViewer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +93,10 @@
     <EmbeddedResource Include="DebugView.resx">
       <SubType>Designer</SubType>
       <DependentUpon>DebugView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools\DisassemblyControl.resx">
+      <DependentUpon>DisassemblyControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Tools\LogViewer.resx">
       <DependentUpon>LogViewer.cs</DependentUpon>
